# Nabd

./: .gitattributes  .gitignore  .prettierignore  LICENSE  NOTICE  PLAN.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.workspace.ts
assets/body/: bodydata.ts  index.ts  meta.ts  muscles.back.ts  muscles.front.ts  types.ts
design_handoff_nabd_workout_tracker/: Nabd.dc.html  Nabd.dc.html:Zone.Identifier  README.md  bodyData.js  exercises.js
design_handoff_nabd_workout_tracker/screens/: progress.png:Zone.Identifier
docs/: AGENTS_GUIDE.md
integration-tests/: AGENT.md  vitest.config.ts
integration-tests/IT1-domain-e2e/: domain-e2e.test.ts
integration-tests/IT3-frontend-backend/: contract.test.ts
integration-tests/IT4-app-e2e/: README.md  package.json  wdio.conf.ts
integration-tests/IT4-app-e2e/specs/: app.e2e.ts
scripts/: gen-packages.mjs
scripts/visual/: _launchtest.mjs  capture.mjs  make-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/B11-persistence/: AGENT.md  Cargo.toml
src-tauri/crates/B11-persistence/src/: error.rs  lib.rs
src-tauri/crates/B12-native/: AGENT.md  Cargo.toml
src-tauri/crates/B12-native/src/: lib.rs
src-tauri/crates/B13-ipc/: AGENT.md  Cargo.toml
src-tauri/crates/B13-ipc/src/: error.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/B01-domain/: AGENT.md  appdata.test.ts  equipment.test.ts  exercise.test.ts  muscles.test.ts  program.test.ts  regions.test.ts  runtime.test.ts  settings.test.ts  theme-tokens.test.ts  tracking.test.ts
tests/B02-dataset/: AGENT.md  dataset.test.ts
tests/B03-coverage/: AGENT.md  coverage.test.ts
tests/B04-scheduling/: AGENT.md  scheduling.test.ts
tests/B05-progression/: AGENT.md  progression.test.ts
tests/B06-session/: AGENT.md  session.test.ts
tests/B07-nudge/: AGENT.md  nudge.test.ts
tests/B08-analytics/: AGENT.md  analytics.test.ts
tests/B09-program-editor/: AGENT.md  program-editor.test.ts
tests/B10-serialization/: AGENT.md  serialization.test.ts
tests/B14-ipc-client/: AGENT.md  ipc-client.test.ts
tests/B15-store/: AGENT.md  store.test.ts
tests/B16-design-system/: AGENT.md  design-system.test.tsx
tests/B17-bodymap/: AGENT.md  bodymap.test.tsx
tests/B18-shell/: AGENT.md  shell.test.tsx
tests/B19-today/: AGENT.md  today.test.tsx
tests/B20-planner/: AGENT.md  planner.test.tsx
tests/B21-progress/: AGENT.md  progress.test.tsx
tests/B22-modals/: AGENT.md  modals.test.tsx
tests/rust/B11-persistence/: AGENT.md  main.rs
tests/rust/B12-native/: AGENT.md  main.rs
tests/rust/B13-ipc/: AGENT.md  main.rs
