[workspace]
resolver = "2"
members = [
    "crates/B11-persistence",
    "crates/B12-native",
    "crates/B13-ipc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mohammad Ewais <mohammad.a.ewais@gmail.com>"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"

# ── Tauri binary crate ───────────────────────────────────────────────────────
[package]
name = "nabd"
version = "0.1.0"
edition = "2021"
description = "Nabḍ — desk workout tracker"
authors = ["Mohammad Ewais <mohammad.a.ewais@gmail.com>"]
license = "MIT"
default-run = "nabd"

[lib]
name = "nabd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "nabd"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
nabd-persistence = { path = "crates/B11-persistence" }
nabd-native = { path = "crates/B12-native" }
nabd-ipc = { path = "crates/B13-ipc" }
window-vibrancy = "0.6"

# Idle detection: Linux uses the dbus backend (avoids the libxss build dep);
# Windows/macOS use the crate's native backend (GetLastInputInfo / IOKit).
[target.'cfg(unix)'.dependencies]
user-idle = { version = "0.6", default-features = false, features = ["dbus"] }

[target.'cfg(windows)'.dependencies]
user-idle = "0.6"

[features]
# default tauri custom-protocol for production builds
custom-protocol = ["tauri/custom-protocol"]
