[package]
name = "nabd-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nabd-persistence = { path = "../B11-persistence" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[[test]]
name = "ipc_tests"
path = "../../../tests/rust/B13-ipc/main.rs"
